--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,8 +5,14 @@ on:
       - '*'
 
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - platform: amd64
+          - platform: arm64
+
     steps:
       - uses: actions/checkout@v4
 
@@ -17,15 +23,28 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/ombra-chat/builder:${{ github.ref_name }}
+          tags: ghcr.io/ombra-chat/builder:${{ github.ref_name }}-${{ matrix.platform }}
+
+  merge:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge images
+        run: docker manifest create ghcr.io/ombra-chat/builder:${{ github.ref_name }} --amend ghcr.io/ombra-chat/builder:${{ github.ref_name }}-arm64 --amend ghcr.io/ombra-chat/builder:${{ github.ref_name }}-amd64
+
+      - name: Push image
+        run: docker push ghcr.io/ombra-chat/builder:${{ github.ref_name }}
